<resources>
    <string name="app_name">EFoodSaver</string>
    <string name="web_client_id">210927889915-63bllp7lsm626ri8abcof1lm9443eckq.apps.googleusercontent.com</string>
    <string name="facebook_app_id">259320543452660</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">1c9f70fe3da4059ffddb745e31692129</string>
    <string name="search">Search</string>

    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recommended_products">Recommended Products</string>
    <string name="my_cart_list">My Cart List</string>
    <string name="category">Category</string>
    <string name="discount_example">Eg: 0 - 100</string>
    <string name="category_example">Eg: Vegetables</string>
    <string name="discount">Discount</string>
    <string name="price_example">Eg: 599.99</string>
    <string name="real_price">Real Price</string>
    <string name="qty_example">Eg: 10</string>
    <string name="quantity">Quantity</string>
    <string name="product_name_example">Eg: Bread</string>
    <string name="product_name">Product Name</string>
    <string name="add_product">Add Product</string>
    <string name="select_category_item">Select a Category</string>
    <string name="select_a_product_type">Select A Product Type</string>
    <string name="type">Type</string>
    <string name="date_example">Eg: 2023/10/12</string>
    <string name="mfg_date">MFG date</string>
    <string name="exg_date">EXG Date</string>
    <string name="description">Description</string>
    <string name="product_images"><u>Product Images</u></string>
    <string name="upload">Upload</string>
    <string name="still_processing">Still Processing, Please Wait…</string>
</resources>