<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProductFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animationView"
                android:layout_width="150sp"
                android:layout_height="150sp"
                android:scaleType="fitCenter"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/packing_anim" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:text="@string/add_product"
                android:textSize="28sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:text="@string/product_name"
                app:fontFamily="@font/nacelle_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/animationView" />

            <EditText
                android:id="@+id/p_name"
                android:layout_width="0dp"
                android:layout_height="40sp"
                android:layout_marginTop="8dp"
                android:background="@drawable/custom_input"
                android:ems="10"
                android:hint="@string/product_name_example"
                android:inputType="text"
                android:isScrollContainer="false"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/textView4"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12sp"
                android:layout_marginEnd="20dp"
                android:text="@string/quantity"
                app:fontFamily="@font/nacelle_light"
                app:layout_constraintEnd_toEndOf="@+id/p_name"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/p_name"
                app:layout_constraintTop_toBottomOf="@+id/p_name" />

            <EditText
                android:id="@+id/qty"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/custom_input"
                android:ems="10"
                android:hint="@string/qty_example"
                android:inputType="number"
                android:isScrollContainer="false"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/textView1"
                app:layout_constraintStart_toStartOf="@+id/textView1"
                app:layout_constraintTop_toBottomOf="@+id/textView1"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12sp"
                android:layout_marginEnd="20dp"
                android:text="@string/real_price"
                app:fontFamily="@font/nacelle_light"
                app:layout_constraintEnd_toEndOf="@+id/qty"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/qty"
                app:layout_constraintTop_toBottomOf="@+id/qty" />

            <EditText
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/lkr"
                android:ems="10"
                android:hint="@string/price_example"
                android:inputType="numberDecimal"
                android:isScrollContainer="false"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/textView6"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12sp"
                android:layout_marginEnd="20dp"
                android:text="@string/discount"
                app:fontFamily="@font/nacelle_light"
                app:layout_constraintEnd_toEndOf="@+id/price"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/price"
                app:layout_constraintTop_toBottomOf="@+id/price" />

            <EditText
                android:id="@+id/discount"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/custom_input"
                android:ems="10"
                android:hint="@string/discount_example"
                android:inputType="number"
                android:isScrollContainer="false"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/textView7"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12sp"
                android:layout_marginEnd="20dp"
                android:text="@string/category"
                app:fontFamily="@font/nacelle_light"
                app:layout_constraintEnd_toEndOf="@+id/discount"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/discount"
                app:layout_constraintTop_toBottomOf="@+id/discount" />

            <AutoCompleteTextView
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/custom_input"
                android:hint="@string/select_category_item"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/textView8"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12sp"
                android:layout_marginEnd="20dp"
                android:text="@string/type"
                app:fontFamily="@font/nacelle_light"
                app:layout_constraintEnd_toEndOf="@+id/category"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/category"
                app:layout_constraintTop_toBottomOf="@+id/category" />

            <AutoCompleteTextView
                android:id="@+id/type"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/custom_input"
                android:hint="@string/select_a_product_type"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/textView9"
                app:layout_constraintStart_toStartOf="@+id/textView9"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12sp"
                android:layout_marginEnd="20dp"
                android:text="@string/mfg_date"
                app:fontFamily="@font/nacelle_light"
                app:layout_constraintEnd_toEndOf="@+id/type"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/type"
                app:layout_constraintTop_toBottomOf="@+id/type" />

            <EditText
                android:id="@+id/mfg_date"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/custom_input"
                android:hint="@string/date_example"
                android:inputType="none"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/textView10"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12sp"
                android:layout_marginEnd="20dp"
                android:text="@string/exg_date"
                app:fontFamily="@font/nacelle_light"
                app:layout_constraintEnd_toEndOf="@+id/mfg_date"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/mfg_date"
                app:layout_constraintTop_toBottomOf="@+id/mfg_date" />

            <EditText
                android:id="@+id/exg_date"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/custom_input"
                android:hint="@string/date_example"
                android:inputType="none"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/textView11"
                app:layout_constraintStart_toStartOf="@+id/textView11"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12sp"
                android:layout_marginEnd="20dp"
                android:text="@string/description"
                app:fontFamily="@font/nacelle_light"
                app:layout_constraintEnd_toEndOf="@+id/exg_date"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/exg_date"
                app:layout_constraintTop_toBottomOf="@+id/exg_date" />

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="120sp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/custom_input"
                android:gravity="top|start"
                android:hint="Eg: Product details"
                android:inputType="textMultiLine"
                android:maxLines="10"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/textView12"
                app:layout_constraintStart_toStartOf="@+id/textView12"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12sp"
                android:layout_marginEnd="20dp"
                android:text="@string/product_images"
                android:textSize="18sp"
                app:fontFamily="@font/nacelle_regular"
                app:layout_constraintEnd_toEndOf="@+id/description"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/description"
                app:layout_constraintTop_toBottomOf="@+id/description" />

            <LinearLayout
                android:id="@id/image_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12sp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="@+id/textView13"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/textView13"
                app:layout_constraintTop_toBottomOf="@+id/textView13">

                <ImageButton
                    android:id="@+id/p_image_1"
                    android:layout_width="100sp"
                    android:layout_marginStart="5sp"
                    android:layout_marginEnd="5sp"
                    android:padding="10dp"
                    android:layout_height="100sp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_round_bg"
                    android:src="@drawable/img_upload_icon" />

                <ImageButton
                    android:id="@+id/p_image_2"
                    android:layout_width="100sp"
                    android:layout_marginStart="5sp"
                    android:padding="10dp"
                    android:layout_marginEnd="5sp"
                    android:layout_height="100sp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_round_bg"
                    android:src="@drawable/img_upload_icon" />

                <ImageButton
                    android:id="@+id/p_image_3"
                    android:layout_marginStart="5sp"
                    android:layout_marginEnd="5sp"
                    android:padding="10dp"
                    android:layout_width="100sp"
                    android:layout_height="100sp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_round_bg"
                    android:src="@drawable/img_upload_icon" />
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/product_upload_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@drawable/custom_button"
                android:layout_marginTop="16sp"
                android:layout_marginEnd="20dp"
                android:text="@string/upload"
                android:textSize="14sp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/image_container"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/image_container"
                app:layout_constraintTop_toBottomOf="@+id/image_container" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>